Expand :jvm-opts